RESOLVED FIXED212250
Fix rare scrolling thread crash firing the m_delayedRenderingUpdateDetectionTimer timer
https://bugs.webkit.org/show_bug.cgi?id=212250
Summary Fix rare scrolling thread crash firing the m_delayedRenderingUpdateDetectionT...
Simon Fraser (smfr)
Reported 2020-05-21 19:55:05 PDT
Fix rare scrolling thread crash firing the m_delayedRenderingUpdateDetectionTimer timer
Attachments
Patch (1.89 KB, patch)
2020-05-21 19:57 PDT, Simon Fraser (smfr)
no flags
Simon Fraser (smfr)
Comment 1 2020-05-21 19:57:43 PDT
EWS
Comment 2 2020-05-21 21:12:32 PDT
Committed r262046: <https://trac.webkit.org/changeset/262046> All reviewed patches have been landed. Closing bug and clearing flags on attachment 400014 [details].
Radar WebKit Bug Importer
Comment 3 2020-05-21 21:13:15 PDT
Note You need to log in before you can comment on or make changes to this bug.