Fix rare scrolling thread crash firing the m_delayedRenderingUpdateDetectionTimer timer https://bugs.webkit.org/show_bug.cgi?id=212250

Reviewed by Tim Horton.

It seems that we can fire the m_delayedRenderingUpdateDetectionTimer timer after the
ScrollingTree has been destroyed (possibly because it's destroyed on another thread
and CFRunLoopTimerRef isn't threadsafe), so explicitly clear the timer in invalidate()
while holding m_treeMutex.

* page/scrolling/ThreadedScrollingTree.cpp:
(WebCore::ThreadedScrollingTree::invalidate):


Canonical link: https://commits.webkit.org/225114@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@262046 268f45cc-cd09-0410-ab3c-d52691b4dbfc